Fix z-index

--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     position: fixed;
     overflow-y: auto;
+    z-index: 140;
 
     &--visible {
         display: flex;
